Try Salt tokens

--- a/docs/visualizer/moon.yml
+++ b/docs/visualizer/moon.yml
@@ -23,7 +23,7 @@ tasks:
       - vite
       - build
     deps:
-      - ~:typescript
+      # - ~:typescript
     platform: node
     inputs:
       - "config"
