--- a/package.json
+++ b/package.json
@@ -4,8 +4,6 @@
   "type": "module",
   "scripts": {
     "moon": "moon",
-    "pre-commit": "lint-staged",
-    "prepare": "husky install",
     "release": "changeset publish"
   },
   "repository": {
@@ -32,7 +30,7 @@
     "prettier": "^3.2.5"
   },
   "engines": {
-    "node": "~20.11"
+    "node": "^20"
   },
   "packageManager": "pnpm@8.15.1"
 }
